add sell button
import css button to get Sell click

--- a/Prototype/web/index.html
+++ b/Prototype/web/index.html
@@ -60,8 +60,6 @@
         </table>
     </div>
 
-    <br>
-
     <div id="vendingMachine">
         <table class="table">
             <thead>
@@ -109,6 +107,10 @@
             </tbody>
         </table>
     </div>
+
+    <br>
+
+    <button class="button" role="button">SELL</button>
 
     <br>
 
