--- a/Prototype/web/index.html
+++ b/Prototype/web/index.html
@@ -22,11 +22,11 @@
             <tbody>
                 <tr>
                     <td class="cells"></td>
-                    <td class="cells"></td>
-                    <td class="cells_price">100$</td>
-                    <td class="cells_price">500$</td>
-                    <td class="cells_price">1.000$</td>
-                    <td class="cells_price">5.000$</td>
+                    <td class="cells">unlock</td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">100$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">500$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">1.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">5.000$</button></td>
                     <td class="cells"></td>
                 </tr>
                 <tr>
@@ -60,6 +60,12 @@
         </table>
     </div>
 
+    <br>
+
+    <button class="button_sell" role="button">SELL</button>
+
+    <br>
+
     <div id="vendingMachine">
         <table class="table">
             <thead>
@@ -71,48 +77,38 @@
                 <tr>
                     <td class="cells"></td>
                     <td class="cells_product">Fresh<br>Water</td>
-                    <td class="cells_price">1$</td>
-                    <td class="cells"></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">1$</button></td>
+                    <td class="cells">Stock<br>20</td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells_product">Orange<br>Juice</td>
-                    <td class="cells_price">2$</td>
-                    <td class="cells"></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">2$</button></td>
+                    <td class="cells">Stock<br>20</td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells_product">Lemonade</td>
-                    <td class="cells_price">3$</td>
-                    <td class="cells"></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">3$</button></td>
+                    <td class="cells">Stock<br>20</td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells_product">Orange Soda</td>
-                    <td class="cells_price">4$</td>
-                    <td class="cells"></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">4$</button></td>
+                    <td class="cells">Stock<br>20</td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells_product">Cola</td>
-                    <td class="cells_price">5$</td>
-                    <td class="cells"></td>
-                </tr>
-                <tr>
-                    <td class="cells"></td>
-                    <td class="cells">Stock = 20</td>
-                    <td class="cells"></td>
-                    <td class="cells"></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">5$</button></td>
+                    <td class="cells">Stock<br>20</td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <br>
 
-    <button class="button" role="button">SELL</button>
-
-    <br>
 
     <div id="warehouse">
         <table class="table">
@@ -141,22 +137,22 @@
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="cells_price">5$</td>
-                    <td class="cells_price">20$</td>
-                    <td class="cells_price">50$</td>
-                    <td class="cells_price">75$</td>
-                    <td class="cells_price">100$</td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">5$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">20$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">50$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">75$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">100$</button></td>
                     <td class="cells"></td>
                     <td class="cells"></td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="cells">+10 Stock =</td>
-                    <td class="cells_price">100$</td>
                     <td class="cells"></td>
-                    <td class="cells">Supplier = </td>
-                    <td class="cells_price">1.000$</td>
+                    <td class="cells_price">+10 Stock<br><button type="button" class="button" onclick="">100$</button></td>
+                    <td class="cells"></td>
+                    <td class="cells_price">Supplier<br><button type="button" class="button" onclick="">1.000$</button></td>
+                    <td class="cells"></td>
                     <td class="cells"></td>
                     <td class="cells"></td>
                 </tr>
@@ -179,22 +175,22 @@
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="cells_price">10.000$</td>
-                    <td class="cells_price">50.000$</td>
-                    <td class="cells_price">100.000$</td>
-                    <td class="cells_price">500.000$</td>
-                    <td class="cells_price">1.000.000$</td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">10.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">50.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">100.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">500.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">1.000.000$</button></td>
                     <td class="cells"></td>
                     <td class="cells"></td>
                 </tr>
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="cells">Refill = </td>
-                    <td class="cells_price">70$</td>
                     <td class="cells"></td>
-                    <td class="cells">Supplier = </td>
-                    <td class="cells_price">5.000$</td>
+                    <td class="cells_price">Refill<br><button type="button" class="button" onclick="">70$</button></td>
+                    <td class="cells"></td>                   
+                    <td class="cells_price">Supplier<br><button type="button" class="button" onclick="">5.000$</button></td>
+                    <td class="cells"></td>
                     <td class="cells"></td>
                     <td class="cells"></td>
                 </tr>
@@ -217,7 +213,7 @@
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="tg-baqh" colspan="3">x.xxx.xxx $</td>
+                    <td class="cells_price" colspan="3">x.xxx.xxx $</td>
                     <td class="cells"></td>
                     <td class="cells"></td>
                 </tr>
@@ -233,10 +229,10 @@
                 <tr>
                     <td class="cells"></td>
                     <td class="cells"></td>
-                    <td class="cells">500$</td>
-                    <td class="cells">5.000$</td>
-                    <td class="cells">50.000$</td>
-                    <td class="cells">100.000$</td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">500$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">5.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">50.000$</button></td>
+                    <td class="cells_price"><button type="button" class="button" onclick="">100.000$</button></td>
                     <td class="cells"></td>
                 </tr>
                 <tr>
