add CSS file & update html file
add style for tables and money box & update tables

--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -13,10 +13,10 @@
 </header>
 
 <body>
-    <!-- STAND -->
     <div id="blocLeft">
-        <div id="Stand">
-            <table class="table">
+        <!-- STAND -->
+        <div id="stand">
+            <table>
                 <thead>
                     <th colspan="5">STAND</th>
                 </thead>
@@ -64,9 +64,9 @@
 
         <!-- COOK -->
         <div id="Cook">
-            <table class="table">
+            <table>
                 <thead>
-                    <td colspan="5">KITCHEN</td>
+                    <th colspan="3">KITCHEN</th>
                 </thead>
                 <tbody>
                     <tr>
