add flexbox in CSS

--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -13,6 +13,7 @@
 </header>
 
 <body>
+    <div id="bloc">
     <div id="blocLeft">
         <!-- STAND -->
         <div id="stand">
@@ -113,7 +114,9 @@
             </table>
         </div>
     </div>
+</div>
 </body>
+
 <footer>
     <p>version prototype 0.0.2 - 15/11/2024</p>
 </footer>
