--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -32,11 +32,11 @@
                     </tr>
                     <!-- stock drink -->
                     <tr>
-                        <td>Stock = 0</td>
-                        <td>Stock = 0</td>
-                        <td>Stock = 0</td>
-                        <td>Stock = 0</td>
-                        <td>Stock = 0</td>
+                        <td class="stock">Stock = 0</td>
+                        <td class="stock">Stock = 0</td>
+                        <td class="stock">Stock = 0</td>
+                        <td class="stock">Stock = 0</td>
+                        <td class="stock">Stock = 0</td>
                     </tr>
                     <tr>
                         <td><button>REFILL</button></td>
@@ -78,36 +78,36 @@
                     <!-- Water -->
                     <tr>
                         <td>Water</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                     <!-- Orange -->
                     <tr>
                         <td>Orange</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                     <!-- Lemon -->
                     <tr>
                         <td>Lemon</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                     <!-- Gaz -->
                     <tr>
                         <td>Gaz</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                     <!-- Sugar -->
                     <tr>
                         <td>Sugar</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                     <tr>
                         <td>Coca</td>
-                        <td>0</td>
+                        <td class="stock">0</td>
                         <td><button>$ 1</button></td>
                     </tr>
                 </tbody>
