--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -16,8 +16,8 @@
     <div id="bloc">
     <div id="blocLeft">
         <!-- STAND -->
-        <div id="stand">
-            <table>
+        <div id="standBox">
+            <table id="stand">
                 <thead>
                     <th colspan="5">STAND</th>
                 </thead>
@@ -58,14 +58,14 @@
     </div>
     <div id="blocRight">
         <!-- BANK -->
-        <div id="money">
-            <p>$ 0.000.000</p>
-            <p>+- $10</p>
+        <div id="bank">
+            <p id="money">$ 0.000.000</p>
+            <p id="balance">+- $10</p>
         </div>
 
         <!-- COOK -->
-        <div id="Cook">
-            <table>
+        <div id="kitchenBox">
+            <table id="kitchen">
                 <thead>
                     <th colspan="3">KITCHEN</th>
                 </thead>
