--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -52,6 +52,40 @@
                         <td>$ 2</td>
                         <td>$ 2</td>
                     </tr>
+                    <tr>
+                        <td> <u>Recipe</u>
+                            <ul>
+                                <li>Water x0.20</li>
+                            </ul>
+                        </td>
+                        <td> <u>Recipe</u>
+                            <ul>
+                                <li>Orange x0.50</li>
+                            </ul>
+                        </td>
+                        <td> <u>Recipe</u>
+                            <ul>
+                                <li>Water x0.50</li>
+                                <li>Lemon x0.50</li>
+                            </ul>
+                        </td>
+                        <td> <u>Recipe</u>
+                            <ul>
+                                <li>Water x0.50</li>
+                                <li>Orange x0.50</li>
+                                <li>Sugar x0.20</li>
+                                <li>Gaz x0.10</li>
+                            </ul>
+                        </td>
+                        <td> <u>Recipe</u>
+                            <ul>
+                                <li>Water x0.50</li>
+                                <li>Coca x0.50</li>
+                                <li>Sugar x0.20</li>
+                                <li>Gaz x0.10</li>
+                            </ul>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
