add button View Final Page

--- a/Prototype/V2/index.html
+++ b/Prototype/V2/index.html
@@ -82,6 +82,7 @@
 </body>
 
 <footer>
+     <a  href="index_STAND.html"><button>View Final Page</button></a>
     <p>version prototype 0.0.2 - 02/12/2024</p>
 </footer>
 
